back - Update db string

--- a/back/src/PadTime.API/appsettings.Development.json
+++ b/back/src/PadTime.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=orbit42;Username=orbituser;Password=orbitpass"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=padtime;Username=orbituser;Password=orbitpass"
   },
   "Authentication": {
     "Authority": "https://localhost:5001",
